add_compile_options(-Wall -Wextra )

add_subdirectory (host)
add_subdirectory (model)
add_subdirectory (loaders)
add_subdirectory (support)
add_subdirectory (hash)	
add_subdirectory (cpa)
add_subdirectory (storage)
add_subdirectory (algorithms)	
add_subdirectory (util)
add_subdirectory (vm)
add_subdirectory (smt)

add_library (minimclib SHARED dummy.cpp)
target_link_libraries (minimclib PUBLIC model)
target_link_libraries (minimclib PUBLIC loader)
target_link_libraries (minimclib PUBLIC support)
target_link_libraries (minimclib PUBLIC hash)
target_link_libraries (minimclib PUBLIC vm)
target_link_libraries (minimclib PUBLIC cpa)
target_link_libraries (minimclib PUBLIC algorithms)
target_link_libraries (minimclib PUBLIC util)
target_link_libraries (minimclib PUBLIC host)
target_link_libraries (minimclib PUBLIC smt)

INSTALL (TARGETS minimclib )
 
