add_compile_options(-Wall -Wextra )

add_subdirectory (host)
add_subdirectory (model)
add_subdirectory (loaders)
add_subdirectory (support)
add_subdirectory (hash)	
add_subdirectory (cpa)
add_subdirectory (storage)
add_subdirectory (algorithms)	
add_subdirectory (util)
add_subdirectory (vm)
add_subdirectory (smt)

add_library (minimclib INTERFACE)
target_link_libraries (minimclib INTERFACE model)
target_link_libraries (minimclib INTERFACE loader)
target_link_libraries (minimclib INTERFACE support)
target_link_libraries (minimclib INTERFACE hash)
target_link_libraries (minimclib INTERFACE vm)
target_link_libraries (minimclib INTERFACE cpa)
target_link_libraries (minimclib INTERFACE algorithms)
target_link_libraries (minimclib INTERFACE util)
target_link_libraries (minimclib INTERFACE host)
target_link_libraries (minimclib INTERFACE smt)


install (TARGETS model support hash cpa algorithms util host smt FILE_SET HEADERS)
