
SET(CPACK_GENERATOR "ZIP")
INSTALL (TARGETS model DESTINATION lib)
INSTALL (TARGETS loader DESTINATION lib)
INSTALL (TARGETS support DESTINATION lib)
INSTALL (TARGETS hash DESTINATION lib)
INSTALL (TARGETS cpa DESTINATION lib)
INSTALL (TARGETS algorithms DESTINATION lib)



INSTALL (TARGETS pgraph DESTINATION bin)
include(CPack)	
