
SET(CPACK_GENERATOR "ZIP")
INSTALL (TARGETS minimclib DESTINATION lib)
INSTALL (TARGETS minimc DESTINATION bin)
if (ENABLE_SYMBOLIC)
   INSTALL (TARGETS  smtlib DESTINATION  lib)  
endif(ENABLE_SYMBOLIC)

if (ENABLE_PYTHON)
   INSTALL (TARGETS  pyminimc DESTINATION  python)  
endif(ENABLE_PYTHON)



include(CPack)	
